--- a/Session1/Session1.Api/Session1.Api.csproj
+++ b/Session1/Session1.Api/Session1.Api.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <None Update="MyStaticFiles\staticfile.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
