--- a/Session1/Session1.Api/Session1.Api.csproj
+++ b/Session1/Session1.Api/Session1.Api.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
       <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.2" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <None Update="MyStaticFiles\staticfile.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
