session 4, real api

--- a/Session1/Session1.Api/Session1.Api.csproj
+++ b/Session1/Session1.Api/Session1.Api.csproj
@@ -9,12 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.2" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
-    <None Update="MyStaticFiles\staticfile.html">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
