--- a/Session1/Session1.Api/appsettings.json
+++ b/Session1/Session1.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApplicationSettings": {
-    "SomeKey": "SomeValue"
+    "OnlyShowRealAnimals":  true
   },
   "Logging": {
     "LogLevel": {
